# leetcode_practice

./: CMakeLists.txt  addTwoNumbers_2.c  addTwoNumbers_445.c  bin_tree.c  canConstruct_383.c  getMiniDifference_530.c  hasCycle_141.c  invertTree_226.c  list.c  matrix_test.c  max_depth_104.c  queue.c  rightSideView_199.c  snake_ladder_909.c  solve_130.c
double_ptrs/: isPalindrome_125.c  isSubSequence_392.c  maxArea_11.c  threeSum_15.c  twoSum_167.c
hash/: _longestConsecutive_128.c  containsNearbyDuplicate_219.c  groupAnagrams_49.c  isAnagram_242.c  isHappy_202.c  isIsomorphic_205.c  twoSum_1.c  wordPattern_290.c
include/: bin_tree.h  graph.h  list.h  queue.h
lib/: bin_tree.c  graph.c  list.c
list/: LRUCache_146.c  copyRandomLists_138.c  deleteDuplicates_82.c  mergeTwoLists_21.c  partition_86.c  removeNth_19.c  reverseBetween_92.c  reverseKGroup_25.c  rotateRight_61.c
map/: canFinish_207.c  cloneGraph_133.c  equationPossible_990.c  numIslands_200.c  solve_130.c
matrix/: _rotate_48.c  gameOfLife_289.c  is_valid_sudoku_36.c  setZeroes_73.c  spiralOrder_54.c
range/: findMinArrowShots_452.c  insert_57.c  merge_56.c  summaryRanges_228.c  summary_range_228.c
slide_win/: findAnagrams_438.c  findSubstring_30.c  lengthOfLongestSubstring_3.c  minSubArrayLen_209.c  minWindow_76.c
stack/: caculate_224.c  evalRPN_150.c  is_valid_20.c  minStack_155.c  simplifyPath_71.c
string_array/: _canCompleteCircuit_134.c  _candy_135.c  _trap_42.c  canCompleteCircuit_134.c  canJump_55.c  fullJustify_68.c  hindex_247.c  intToRoman_12.c  jump_45.c  lengthOfLastWord_58.c  longestCommonPrefix_14.c  majorityElement_169.c  maxProfit_121.c  maxProfit_122.c  productExceptSelf_238.c  random_380.c  removeDuplicates_26.c  removeDuplicates_80.c  removeElement_27.c  reverseWords_151.c  romanToInt_13.c  rotate_189.c  strStr_28.c  zconvert_6.c
tree/: _lowestCommonAncestor_236.c  averageOfLevels_637.c  bSTIteratorFree_173.c  buildTree_105.c  buildTree_106.c  connect_117.c  countNodes_222.c  flatten_114.c  hasPathSum_112.c  isSameTree_100.c  isSymmetric_101.c  isValidBST_98.c  kthSmallest_230.c  levelOrder_102.c  maxPathSum_124.c  sumNumbers_129.c  zigzagLevelOrder_103.c
